src/dts/tests/nested_modules/nested_modules.exp

nested_modules.js:6:18,20: number
This type is incompatible with
nested_modules.js:6:9,14: string

nested_modules.js:8:18,21: number
This type is incompatible with
nested_modules.js:8:9,14: string

nested_modules.js:9:20,33: call of method `successor`
Error:
nested_modules.js:9:20,33: number
This type is incompatible with
nested_modules.js:9:11,16: string

nested_modules.js:10:30,44: call of method `identity`
Error:
nested_modules.js:10:30,44: C
This type is incompatible with
nested_modules.js:9:11,16: string

nested_modules.js:10:30,44: call of method `identity`
Error:
nested_modules.js:10:30,44: number
This type is incompatible with
nested_modules.js:9:11,16: string

nested_modules.js:11:18,22: number
This type is incompatible with
nested_modules.js:11:9,14: string

Found 6 errors
